--- a/curso_definitivo_html/responsive_design/proyecto_response.css
+++ b/curso_definitivo_html/responsive_design/proyecto_response.css
@@ -15,6 +15,7 @@
 .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
 }
 
@@ -26,6 +27,7 @@
 }
 .header_data{
     background-color: salmon;
+    width: 100vw;
 }
 .main{
     background-color: yellow;
@@ -90,6 +92,28 @@
 }
 
 @media (min-width: 50rem) {
+    .container{
+        width: 50rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .products{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
     
+    .products_desc{        
+        display: flex;
+        flex-direction: column;
+
+    }
+    
+    .product_desc--num{
+        
+        height: 14rem;
+        width: 14rem;
+    }
 
 }
