--- a/curso_definitivo_html/responsive_design/proyecto_response.css
+++ b/curso_definitivo_html/responsive_design/proyecto_response.css
@@ -72,12 +72,14 @@
     font-family: var(--common-font);
     font-weight: 700;
     text-align: center;
+    font-size: 2em;
 }
 
 .main_resena--p{
     font-family: var(--common-font);
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
+    font-size:  1em;
 }
 
 /* product section styles */
@@ -93,18 +95,32 @@
 .products_list--name{
     font-family: var(--common-font);
     font-weight: 700;
+    font-size: 1.4em;
 }
 
 .products_desc{
-    background-color: blanchedalmond;
+    background-color: transparent;
 }
 
 .product_desc--num{
-    height: 11rem;
+    height: 12rem;
     width: 100vw;
-    background-color: aqua;
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-bottom: solid 1px var(--second-color);
 }
 
+.products_desc--text{
+    font-family: var(--common-font);
+    font-weight: 700;
+}
+
+.products_desc--img{
+    width: 12rem;
+    height: 11rem;
+}
 
 .footer{
     background-color: forestgreen;
